--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.show_sql=true
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=test
+spring.datasource.password=test
+
+server.port=9090
 
 # TODO Append connection to DB
 
